# puppet-llm-training-project

./: .gitignore  README.md  main.py  pyproject.toml  test_gpu.py  test_gpu_rtx5070ti.py
data_collection/: github_puppet_scraper.py  pdf_puppet_extractor.py  website_puppet_scraper.py
data_processing/: create_training_dataset.py
deployment/: deploy_puppet_llm.py
evaluation/: evaluate_models.py  test_puppet_model.py
puppet-llm-training-project/: pyproject.toml  requirements.txt
training/: create_enhanced_dataset.py  create_puppet_dsl_dataset.py  download_model.py  finetune_puppet_model.py  test_dsl_finetune.py  test_enhanced_finetune.py  test_finetune.py  train_full_model.py  training_config.toml
training/puppet-finetuned-model/: README.md
