[project]
name = "puppet-llm-training-project"
version = "0.1.0"
description = "A machine learning project for training language models on Puppet configuration management code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["puppet", "llm", "machine-learning", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
