[project]
name = "puppet-llm-training-project"
version = "0.1.0"
description = "A machine learning project for training language models on Puppet configuration management code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers==4.36.0",
    "datasets==2.14.0",
    "accelerate==0.24.0",
    "peft==0.7.0",
    "bitsandbytes==0.41.0",
    "pandas",
    "jupyter",
    "notebook",
    "tqdm",
    "sentencepiece",
    "protobuf",
    "requests",
    "beautifulsoup4",
    "PyPDF2",
    "flask"
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["puppet", "llm", "machine-learning", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "ipython",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
# RTX 5070 TI (sm_120) now supported with PyTorch 2.7.1+cu128!
# Successfully using CUDA 12.8 build with full GPU functionality
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
