[project]
name = "puppet-llm-training"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision", 
    "torchaudio",
    "transformers==4.36.0",
    "datasets==2.14.0",
    "accelerate==0.24.0",
    "peft==0.7.0",
    "bitsandbytes==0.41.0",
    "pandas",
    "jupyter",
    "notebook",
    "tqdm",
    "sentencepiece",
    "protobuf",
    "requests",
    "beautifulsoup4",
    "PyPDF2",
    "flask"
]

[project.optional-dependencies]
dev = [
    "ipython",
    "black",
    "ruff"
]
